[package]
name = "anydate"
description = "Date & DateTime string parser"
version = "0.3.0"
edition = "2021"
authors = ["Dean Karn <dean.karn@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-playground/anydate"
categories = [
    "date-and-time",
    "parsing",
    "parser-implementations",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
harness = false
name = "bench"

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["std"] }
serde = {version = "1.0.192", features = ["derive"], optional = true }
thiserror = "1.0.50"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_json = "1.0.108"

[lib]
bench = false

[features]
default = []


[package.metadata.docs.rs]
features = ["serde"]

[package.metadata.playground]
features = ["serde"]
